--- a/prod-server deployment.yml
+++ b/prod-server deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: medicure-test-app
-        image: pravallikamunny/medicure-app:1.0
+        image: anurag1493/medicure-app:1.0
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8082
